--- a/documentation/colloquium/presentation/_extensions/mcanouil/coeos/coeos.scss
+++ b/documentation/colloquium/presentation/_extensions/mcanouil/coeos/coeos.scss
@@ -132,3 +132,11 @@ code.sourceCode>span {
   -ms-transform: translateY(-50%), translateX(-50%);
   transform: translateY(-50%), translateX(-50%);
 }
+
+
+.container{
+    display: flex;
+}
+.col{
+    flex: 1;
+}
