--- a/documentation/colloquium/presentation/_extensions/mcanouil/coeos/coeos.scss
+++ b/documentation/colloquium/presentation/_extensions/mcanouil/coeos/coeos.scss
@@ -34,7 +34,7 @@ $code-block-border-color: $body-color !default;
   text-align: left;
   .title{
     font-style:normal;
-    // font-size: 80%;
+    font-size: 100%;
     color: rgb(0, 151, 146);
   }
   .subtitle,
